server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__a_lambda_shows_what_the_call_around_it_gives_its_parameters.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "(defn each-of {:params [(fn [a] :any) [a]]} [f items] (map f items))\n(each-of (fn [x] |) [1 2 3])"
---
----- SOURCE CODE
(defn each-of {:params [(fn [a] :any) [a]]} [f items] (map f items))
(each-of (fn [x] |) [1 2 3])

----- SIGNATURE
(fn [x: :number]) -> :nil
