server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__a_signature_reads_the_arguments_past_the_one_being_written.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "(defn pair {:params [a a] :ret [a a]} [left right] [left right])\n(pair | \"s\")"
---
----- SOURCE CODE
(defn pair {:params [a a] :ret [a a]} [left right] [left right])
(pair | "s")

----- SIGNATURE
(pair left: :string right: :string) -> [:string :string]
