server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__call_at_the_end_of_an_argument.snap
---
source: server/src/analysis/symbols/tests.rs
expression: (map inc| (range 3) )
---
----- CALL
(map inc (range 3) )
 ▔▔▔    ↑
argument 0
