server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__call_past_the_last_argument.snap
---
source: server/src/analysis/symbols/tests.rs
expression: (map inc (range 3) |)
---
----- CALL
(map inc (range 3) )
 ▔▔▔               ↑
argument 2
