server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__completes_locals_definitions_and_imports.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "(import ./shapes)\n(defn f [alpha] (let [beta 1] |))"
---
----- SOURCE CODE
-- /ws/shapes.janet
(defn area "Area." [shape] 1)
(defn- hidden [] 2)
-- /ws/main.janet
(import ./shapes)
(defn f [alpha] (let [beta 1] |))

----- COMPLETIONS
beta (Variable) local: :number
alpha (Variable) local
f (Function) (f alpha)
shapes/area (Function) (shapes/area shape)

----- CORE
break def do fn if quasiquote quote set splice unquote upscope var while
