server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__completes_the_keys_a_form_is_read_by.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "show_keys(&workspace, \"/ws/people.janet\", \":body)\")"
---
----- AT
  (def {:email email :name name :age age} (request |

----- KEYS
:body {:email :any :name :any :age :any & r}
