server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__completes_the_keys_left_in_a_path.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "show_keys(&workspace, \"/ws/people.janet\", \":id]\")"
---
----- AT
  (def eid (scan-number (get-in request [:params |

----- KEYS
:id :string
