server/src/analysis/symbols/snapshots/janet_zed_server__analysis__symbols__tests__completes_the_keys_of_a_destructured_value.snap
---
source: server/src/analysis/symbols/tests.rs
expression: "show_keys(&workspace, \"/ws/people.janet\", \":tempids\")"
---
----- AT
  (def {|

----- KEYS
:tx Eid
:tempids {:string Eid}
